--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@ function send() {
 }
 
     ////////////////MULT//////////////////////////////////////////
-    return scene;
+    /* return scene;
 };
         
-       /* var scene = createScene();
+       var scene = createScene();
         engine.runRenderLoop(function () {
             scene.render();
         });
