--- a/index.html
+++ b/index.html
@@ -2,24 +2,8 @@
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  
+    <title>chat room</title>
   </head>
-   <title>Babylon.js + socket.io</title>
-        <!-- Babylon.js -->
-       
-        <script src="https://www.babylonjs.com/cannon.js"></script>
-        <script src="https://www.babylonjs.com/oimo.js"></script>
-        <script src="https://www.babylonjs.com/babylon.js"></script>
-   <div id="canvasZone">
-        <canvas id="renderCanvas"></canvas>
-</div>
-    <style>
-          #renderCanvas {
-                width: 100%;
-                height: 100%;
-                touch-action: none;
-            }
-        </style>
   <body id = "bb" onload="setup();">
     <div class="container">
       <br />
@@ -32,10 +16,10 @@
       <button onclick="send();">Send</button>
       <script src="client.js"></script>
       <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
-    <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
    <script>
-    var usr = []
+    
+      var usr = []
       var score = 0
 var username = window.prompt('Enter a username:', '');
 document.getElementById('chatContent').innerHTML = "welcome to the chat forum"
@@ -79,6 +63,7 @@ function send() {
  //   pm.push(document.getElementById('chatContent').innerHTML)
   document.getElementById('messageInput').value = '';
 }
+
 
     </script>
     </div>
